# node-output/api/openapi.yaml
@@ -535,6 +535,28 @@ paths:
         "500":
           description: Something went wrong. Please try again later.
       x-swagger-router-controller: Room
+  /getRoomsByUserId:
+    get:
+      tags:
+      - Room
+      summary: Get rooms by user id
+      operationId: getRoomsByUserIdGET
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/inline_response_200_2'
+        "500":
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/inline_response_500'
+      security:
+      - BasicAuth: []
+      x-swagger-router-controller: Room
   /getBuilding:
     get:
       tags:
@@ -726,6 +748,32 @@ components:
         img:
           type: string
           format: binary
+    inline_response_200_2:
+      type: object
+      properties:
+        status:
+          type: string
+        messages:
+          type: string
+        data:
+          $ref: '#/components/schemas/inline_response_200_2_data'
+      example:
+        data:
+          postings:
+          - Status: Status
+            Building: Building
+            Description: Description
+            User: User
+            Price: Price
+            Size: Size
+          - Status: Status
+            Building: Building
+            Description: Description
+            User: User
+            Price: Price
+            Size: Size
+        messages: messages
+        status: status
     inline_response_200_1_data:
       type: object
       properties:
@@ -747,6 +795,27 @@ components:
           buildings: buildings
           userPosting: userPosting
           title: title
+    inline_response_200_2_data:
+      type: object
+      properties:
+        postings:
+          type: array
+          items:
+            $ref: '#/components/schemas/Room'
+      example:
+        postings:
+        - Status: Status
+          Building: Building
+          Description: Description
+          User: User
+          Price: Price
+          Size: Size
+        - Status: Status
+          Building: Building
+          Description: Description
+          User: User
+          Price: Price
+          Size: Size
   securitySchemes:
     BasicAuth:
       type: http
